testdata/baselines/reference/submodule/conformance/checkOtherObjectAssignProperty.errors.txt
importer.js(1,21): error TS2306: File 'mod1.js' is not a module.
mod1.js(2,23): error TS2304: Cannot find name 'exports'.
mod1.js(8,23): error TS2304: Cannot find name 'exports'.
mod1.js(11,23): error TS2304: Cannot find name 'exports'.
mod1.js(14,23): error TS2304: Cannot find name 'exports'.
mod1.js(15,23): error TS2304: Cannot find name 'exports'.
mod1.js(16,23): error TS2304: Cannot find name 'exports'.


==== importer.js (1 errors) ====
    const mod = require("./mod1");
                        ~~~~~~~~
!!! error TS2306: File 'mod1.js' is not a module.
    mod.thing;
    mod.other;
    mod.prop;
    mod.bad1;
    mod.bad2;
    mod.bad3;
    
    
    mod.thing = 0;
    mod.other = 0;
    mod.prop = 0;
    mod.bad1 = 0;
    mod.bad2 = 0;
    mod.bad3 = 0;
    
==== mod1.js (6 errors) ====
    const obj = { value: 42, writable: true };
    Object.defineProperty(exports, "thing", obj);
                          ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    
    /**
     * @type {string}
     */
    let str = /** @type {string} */("other");
    Object.defineProperty(exports, str, { value: 42, writable: true });
                          ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    
    const propName = "prop"
    Object.defineProperty(exports, propName, { value: 42, writable: true });
                          ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    
    
    Object.defineProperty(exports, "bad1", { });
                          ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    Object.defineProperty(exports, "bad2", { get() { return 12 }, value: "no" });
                          ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    Object.defineProperty(exports, "bad3", { writable: true });
                          ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    